--- a/static/css/pledge.css
+++ b/static/css/pledge.css
@@ -16,16 +16,6 @@ body {
     box-sizing: content-box;
 }
 
-.img-charity {
-    // max-height: 130px;
-    // width: auto;
-    horiz-align: center;
-    align: middle;
-    vertical-align: middle;
-    display: table-cell;
-
-}
-
 .btn-recurring {
     padding: 15px 80px;
     font-size: 24px;
@@ -46,29 +36,21 @@ body {
 }
 
 .btn-pmt-method {
-
     width: 150px;
     height: 34px;
     font-size: 15px;
     justify-content: center;
 }
 
-.hovereffect {
-    float: left;
-    overflow: hidden;
+.charity {
     position: relative;
-    text-align: center;
+    display: -moz-inline-stack;
+    display: inline-block;
     vertical-align: middle;
-    margin-right: 15px;
-    margin-bottom: 15px;
-    height: 165px;
-    width: 250px;
-    border: 1px solid #A3A3A4;
-    border-radius: 2px;
-
+    margin: 12px;
 }
 
-.hovereffect .overlay {
+.charity .hover-overlay {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -79,106 +61,85 @@ body {
     transition: all 0.4s ease-in-out;
 }
 
-.hovereffect:hover .overlay {
+.charity:hover .hover-overlay {
     background-color: rgba(170, 170, 170, 0.4);
 }
 
-.hovereffect h2, .hovereffect img {
-    -webkit-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out;
+.charity-info {
+    flex-direction: column;
+    display: flex;
+    height: 165px;
+    width: 250px;
+    border: 1px solid #A3A3A4;
+    border-radius: 2px;
 }
 
-.hovereffect img {
+.charity-img {
     display: block;
     position: relative;
     margin: auto;
+    vertical-align: middle;
     max-height: 115px;
     max-width: 200px;
 }
 
-.hovereffect:hover img {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-}
-
-.hovereffect h2 {
-    text-align: center;
-    position: absolute;
+.charity-info .charity-title {
     font-weight: normal;
     font-size: 15px;
     padding: 10px;
     background-color: #E6EAEB;
     color: #333;
-    margin-top: 0;
-    margin-bottom: 0;
-    bottom: 0;
-    width: 94%;
-
+    margin: 0;
 }
 
-.hovereffect a.info {
+.charity-info .charity-title, .charity-info .charity-img {
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+}
+
+.charity a.charity-details {
     display: inline-block;
     text-decoration: none;
     color: #fff;
+    font-weight: normal;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    padding: 30px 15px;
+
+    /* Transition */
     background-color: transparent;
     opacity: 0;
     filter: alpha(opacity=0);
-    -webkit-transform: scale(1.5);
-    -ms-transform: scale(1.5);
-    transform: scale(1.5);
+    /*-webkit-transform: scale(1.5);*/
+    /*-ms-transform: scale(1.5);*/
+    /*transform: scale(1.5);*/
+
     -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
-    font-weight: normal;
-    width: 90%;
-    height: 150px;
-    position: absolute;
-    left: 0%;
-    padding: 30px 15px;
 }
 
-.hovereffect:hover a.info {
+.charity:hover a.charity-details {
+    background-color: #4c8fb1;
     opacity: 1;
     filter: alpha(opacity=100);
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-    background-color: #4c8fb1;
+    /*-webkit-transform: scale(1);*/
+    /*-ms-transform: scale(1);*/
+    /*transform: scale(1);*/
 }
 
-.charity_container {
-    margin: auto;
-    text-align: center;
-}
-
-.charity_title,
+.charity-title,
 .charityClick {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
 }
 
-.block
-{
-    display: -moz-inline-stack;
-    display: inline-block;
-    vertical-align: middle;
-    zoom: 1;
-    *display: inline;
-
-    margin: 1%;
-
-}
-
 .pin_label {
     alignment: left;
     text-align: left;
-}
-
-.img_frame {
-    display: inline-block;
-    vertical-align: middle;
-    height: 100%;
 }
 
 .error {
