Oops, rebased incorrectly.

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -75,7 +75,7 @@
                         <h2 class="charity-title">[[ website_label ]]</h2>
                     </div>
                     <div class="hover-overlay">
-                        <a class="charity-details charityClick" on-click='@this.charity_click(website_label)' href="#">
+                        <a class="charity-details charityClick" on-click='@this.charity_click(name)' href="#">
                             <b>[[ website_label ]] </b> [[ website_description ]]
                         </a>
                     </div>
