--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -88,8 +88,13 @@
     <div class="row setup-content [[step !== 2 ? 'collapse' : '']]" id="step-2">
         [[#if selected_charity]]
         [[! We need to enclose this in an 'if' to avoid a 404 when the charity is not set but we try to load its logo. ]]
-        <p><img class="img-charity" src="static/[[ selected_charity.website_image ]]">You have earmarked your donation for [[ selected_charity.name ]].
-        100% of your donation will be granted to [[ selected_charity.name ]].</p>
+        <div class="selected-charity-box">
+            <img class="charity-img" src="static/[[ selected_charity.website_image ]]">
+            <p class="donation-info">
+                You have earmarked your donation for [[ selected_charity.name ]].<br/>
+                100% of your donation will be granted to them.
+            </p>
+        </div>
         [[/if ]]
         <form method='post' action='' class='pin' id='id_pledge_form'>
             {% csrf_token %}
