Fixing typo on pledge page

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -87,7 +87,7 @@
 
     [[#if selected_charity.name==='Against Malaria Foundation' & step === 2]]
         <br>
-        You can make a tax deductable donation to the Against Malaria Foundation directly at
+        You can make a tax deductible donation to the Against Malaria Foundation directly at
         <a href='https://www.againstmalaria.com/Donation.aspx'>https://www.againstmalaria.com/Donation.aspx</a>
     [[/if ]]
 
