avoid db query when showing donation form

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -211,7 +211,7 @@
         </form>
 
         <div align="center" id="id_paypal" class="payment_option [[pmt_method != '4' ? 'collapse' : '' ]]">
-            {{ paypalform.render }}
+            {{ paypal_form.render }}
         </div>
 
     </div>
