--- a/pinpayments/templates/pinpayments/pin_form.html
+++ b/pinpayments/templates/pinpayments/pin_form.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div class="panel panel-default credit-card-box">
+<div class="panel panel-default form-container">
     <fieldset id='pin_credit_card_details'>
 {#        <legend>{% trans "Credit Card Details" %}</legend>#}
 
