--- a/static/css/credit_card.css
+++ b/static/css/credit_card.css
@@ -2,43 +2,43 @@
 body { margin-top:20px; }
 
 /* CSS for Credit Card Payment form */
-.credit-card-box .panel-title {
+.form-container .panel-title {
     display: inline;
     font-weight: bold;
 }
-.credit-card-box .form-control.error {
+.form-container .form-control.error {
     border-color: red;
     outline: 0;
     box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(255,0,0,0.6);
 }
-.credit-card-box label.error {
+.form-container label.error {
   font-weight: bold;
   color: red;
   padding: 2px 8px;
   margin-top: 2px;
 }
-.credit-card-box .payment-errors {
+.form-container .payment-errors {
   font-weight: bold;
   color: red;
   padding: 2px 8px;
   margin-top: 2px;
 }
-.credit-card-box label {
+.form-container label {
     display: block;
 }
 /* The old "center div vertically" hack */
-.credit-card-box .display-table {
+.form-container .display-table {
     display: table;
 }
-.credit-card-box .display-tr {
+.form-container .display-tr {
     display: table-row;
 }
-.credit-card-box .display-td {
+.form-container .display-td {
     display: table-cell;
     vertical-align: middle;
     width: 50%;
 }
 /* Just looks nicer */
-.credit-card-box .panel-heading img {
+.form-container .panel-heading img {
     min-width: 180px;
 }
