"Having a problem donating?"

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -207,6 +207,10 @@
                     {% pin_form %}
                 </div>
 
+                <p>
+                    Having a problem donating? Please let us know at info@effectivealtruism.org.au.
+                </p>
+
                 <div class="form-actions">
                     <button type="submit"
                             class="btn btn-success btn-lg pull-right subscribe"
